# TTS_test

./: .README.md.swp  .build_docker.sh.swp  .dockerignore  .env.docker.sm120  .env.docker.sm86  .env.docker.sm89  .env.docker.sm90  .gitignore  =2.8.3  Dockerfile  POSTMAN_GUIDE.md  README.md  Review.md  TASK.md  benchmark_qwentts.py  build_docker.sh  build_flash_attn_wheel.sh  docker-compose.yml  download_models.sh  export_docker.sh  install_flash_attn.sh  main.py  pyproject.toml  run_server.sh
app/: main.py  model_manager.py  queue_worker.py  schemas.py
app/routers/: tts.py
test/: index.html
