[project]
name = "qwen3-tts-custom"
version = "0.1.0"
description = "Qwen3-TTS Custom Project with CUDA 13.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelscope>=1.34.0",
    "torch",
    "torchvision",
    "torchaudio",
    "psutil>=7.2.2",
    "ninja>=1.13.0",
    "flash-attn>=2.8.3",
    "packaging>=26.0",
    "setuptools<82",
    "wheel>=0.46.3",
    "qwen-tts>=0.1.1",
    "hf>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "soundfile>=0.13.1",
]

[tool.uv]
index = [
    { name = "pytorch-cu130", url = "https://download.pytorch.org/whl/cu130", explicit = true }
]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
