[project]
name = "qwen3-tts-custom"
version = "0.1.0"
description = "Qwen3-TTS Custom Project with CUDA 13.0"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "modelscope>=1.34.0",
    "torch",
    "torchvision",
    "torchaudio",
    "psutil>=7.2.2",
    "ninja>=1.13.0",
    "packaging>=26.0",
    "setuptools<82",
    "wheel>=0.46.3",
    "qwen-tts>=0.1.1",
    "hf>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "soundfile>=0.13.1",
]

[tool.uv]
index = [
    { name = "pytorch-cu128", url = "https://download.pytorch.org/whl/cu128", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
